add elements and styles

--- a/v2/bower.json
+++ b/v2/bower.json
@@ -20,6 +20,10 @@
     "tests"
   ],
   "dependencies": {
-    "react": "~0.13.3"
+    "react": "~0.13.3",
+    "particleground": "https://github.com/jnicol/particleground.git"
+  },
+  "devDependencies": {
+    "jquery": "~2.1.4"
   }
 }
