--- a/bower.json
+++ b/bower.json
@@ -20,11 +20,9 @@
     "tests"
   ],
   "dependencies": {
-    "react": "~0.13.3",
+    // "react": "~0.13.3",
     "particleground": "https://github.com/jnicol/particleground.git",
-    "font-awesome": "4.4.0"
-  },
-  "devDependencies": {
+    "font-awesome": "4.4.0",
     "jquery": "~2.1.4"
   }
 }
