--- a/package.json
+++ b/package.json
@@ -4,9 +4,19 @@
   "description": "personal portfolio",
   "main": "index.html",
   "dependencies": {
-    "babel-core": "^5.8.22"
+    "babel-core": "^5.8.22",
+    "react": "^0.13.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-loader": "^5.3.2",
+    "css-loader": "^0.18.0",
+    "extract-text-webpack-plugin": "^0.8.2",
+    "less": "^2.5.1",
+    "less-loader": "^2.2.0",
+    "path": "^0.11.14",
+    "style-loader": "^0.12.3",
+    "webpack": "^1.12.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
