--- a/package.json
+++ b/package.json
@@ -19,5 +19,15 @@
   "dependencies": {
     "sanitize.css": "^5.0.0",
     "sweetalert2": "^6.6.10"
+  },
+  "devDependencies": {
+    "del": "^3.0.0",
+    "gulp": "^3.9.1",
+    "gulp-clean-css": "^3.8.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-concat-css": "^2.3.0",
+    "gulp-minify": "^1.0.0",
+    "gulp-rev": "^8.0.0",
+    "gulp-rev-replace": "^0.4.3"
   }
 }
