--- a/package.json
+++ b/package.json
@@ -1,33 +1,17 @@
 {
-  "name": "homepage",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/eantz/destiyadian.com.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/eantz/destiyadian.com/issues"
-  },
-  "homepage": "https://github.com/eantz/destiyadian.com#readme",
+  "name": "personal",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "sanitize.css": "^5.0.0",
-    "sweetalert2": "^6.6.10"
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-router": "^4.2.0",
+    "react-scripts": "1.0.17"
   },
-  "devDependencies": {
-    "del": "^3.0.0",
-    "gulp": "^3.9.1",
-    "gulp-clean-css": "^3.8.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-concat-css": "^2.3.0",
-    "gulp-minify": "^1.0.0",
-    "gulp-rev": "^8.0.0",
-    "gulp-rev-replace": "^0.4.3"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
